; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/avcodec/extr_subtitle.c_DecodeSubtitle.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/avcodec/extr_subtitle.c_DecodeSubtitle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLCDEC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @DecodeSubtitle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DecodeSubtitle(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %11

10:                                               ; preds = %2
  br label %11

11:                                               ; preds = %10, %9
  %12 = phi i32** [ %4, %9 ], [ null, %10 ]
  store i32** %12, i32*** %5, align 8
  br label %13

13:                                               ; preds = %18, %11
  %14 = load i32*, i32** %3, align 8
  %15 = load i32**, i32*** %5, align 8
  %16 = call i32* @DecodeBlock(i32* %14, i32** %15)
  store i32* %16, i32** %6, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %22

18:                                               ; preds = %13
  %19 = load i32*, i32** %3, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @decoder_QueueSub(i32* %19, i32* %20)
  br label %13

22:                                               ; preds = %13
  %23 = load i32, i32* @VLCDEC_SUCCESS, align 4
  ret i32 %23
}

declare dso_local i32* @DecodeBlock(i32*, i32**) #1

declare dso_local i32 @decoder_QueueSub(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
